fixed gap sizing for sidebar and main content

--- a/src/containers/MainContent/MainContent.module.css
+++ b/src/containers/MainContent/MainContent.module.css
@@ -1,7 +1,6 @@
 @import './../../styles/index.css';
 
 .main-content {
-  column-gap: $gap-3XXlarge;
   display: grid;
   grid-template-columns: 0.1fr repeat(3, 1fr) 0.1fr;
   grid-template-rows: 0.1fr repeat(3, 1fr) 0.1fr;
@@ -10,21 +9,22 @@
 
   & .main-content__sidebar {
     grid-area: 1 / 1 / 6 / 2;
+    width: 100%;
   }
 
   & .main-content__header {
     grid-area: 1 / 2 / 2 / 5;
-    padding-bottom: $spacing-2xxl;
-    padding-top: $spacing-xs;
+    padding: $spacing-xs $spacing-l $spacing-2xxl $spacing-l;
   }
 
   & .main-content__outlet {
     grid-area: 2 / 2 / 5 / 5;
+    padding: 0 $spacing-l;
   }
 
   & .main-content__outlet-full-col {
     grid-area: 2 / 2 / 5 / 6;
-    padding-right: $spacing-l;
+    padding: 0 $spacing-l;
   }
 
   & .main-content__aside {
