--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,7 +16,7 @@ body {
   background-color: $color-page-background;
   font-family: Poppins, sans-serif;
   margin: 0 auto;
-  max-width: 1440px;
+  max-width: 1442px;
   padding: 0;
 }
 
